--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>25</java.version>
         <kotlin.version>2.3.10</kotlin.version>
         <jib.maven.plugin.version>3.5.1</jib.maven.plugin.version>
+        <springdoc.version>3.0.1</springdoc.version>
     </properties>
 
     <modules>
@@ -27,6 +28,16 @@
         <module>bank</module>
         <module>central-bank</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
