--- a/bank/src/main/resources/application-local.yml
+++ b/bank/src/main/resources/application-local.yml
@@ -1,13 +1,5 @@
-spring:
-  datasource:
-    url: "jdbc:h2:mem:bankdb;DB_CLOSE_DELAY=-1"
-    driver-class-name: "org.h2.Driver"
-    username: sa
-    password: password
-  h2:
-    console:
-      enabled: true
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create-drop
+JDBC_URL: jdbc:postgresql://localhost:5432/bank
+JDBC_USER: postgres
+JCBC_PASSWORD: postgres
+
+API_PORT: 8080
