--- a/bank/src/main/resources/application.yml
+++ b/bank/src/main/resources/application.yml
@@ -4,14 +4,8 @@ spring:
   application:
     name: bank
   datasource:
-    url: jdbc:postgresql://localhost:5432/bank
-    username: user
-    password: password
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: true
-  flyway:
-    enabled: true
+    url: ${JDBC_URL}
+    username: ${JDBC_USER}
+    password: ${JCBC_PASSWORD}
 server:
-  port: 8082
+  port: ${API_PORT:8080}
