Add k8s deployment scripts

--- a/deploy/k8s/keycloak/deployment.yaml
+++ b/deploy/k8s/keycloak/deployment.yaml
@@ -38,7 +38,7 @@ spec:
             - name: DB_ADDR
               value: "postgres"
             - name: DB_PORT
-              value: 5432
+              value: "5432"
             - name: DB_USER
               value: keycloak
             - name: DB_PASSWORD
