Add villadiana deployment

--- a/deploy/k8s/villadiana/configmap.yaml
+++ b/deploy/k8s/villadiana/configmap.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: villadiana-config
+  name: villadiana
 data:
   KEYCLOAK_ISSUER_URI: https://auth.roskenet.de/realms/petunia
   KEYCLOAK_TOKEN_URI: https://auth.roskenet.de/realms/petunia/protocol/openid-connect/token
+  KEYCLOAK_SECRET: {{{PROD_VILLADIANA_KEYCLOAK_SECRET}}}
   NAKADI_URI: http://nakadi
   ALLOWED_ORIGINS: https://petunia.roskenet.de
   POST_LOGOUT_REDIRECT: https://petunia.roskenet.de
