--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,7 @@
     <modules>
         <module>engine</module>
         <module>central-bank</module>
-<!--        villadiana is not correctly set up for now  keep it separately -->
-<!--        <module>villadiana</module>                                  -->
+        <module>villadiana</module>
     </modules>
 
     <dependencyManagement>
