Remove backups that confuse AI

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <modules>
         <module>engine</module>
         <module>central-bank</module>
-        <module>villadiana</module>
+<!--        <module>villadiana</module>-->
     </modules>
 
     <dependencyManagement>
