--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <modules>
         <module>engine</module>
         <module>central-bank</module>
-<!--        <module>villadiana</module>-->
+        <module>villadiana</module>
     </modules>
 
     <dependencyManagement>
@@ -51,8 +51,6 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
