--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
                         <image>eclipse-temurin:25-jre-alpine</image>
                     </from>
                     <to>
-                        <image>petunia/${project.artifactId}:${project.version}</image>
+                        <image>roskenet/${project.artifactId}:${project.version}</image>
                     </to>
                     <container>
                         <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
