--- a/deploy/k8s/villadiana/configmap.yaml
+++ b/deploy/k8s/villadiana/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   KEYCLOAK_ISSUER_URI: https://auth.roskenet.de/realms/petunia
   KEYCLOAK_TOKEN_URI: https://auth.roskenet.de/realms/petunia/protocol/openid-connect/token
-  KEYCLOAK_SECRET: {{{PROD_VILLADIANA_KEYCLOAK_SECRET}}}
+  KEYCLOAK_SECRET: 
   ALLOWED_ORIGINS: https://petunia.roskenet.de
   POST_LOGOUT_REDIRECT: https://petunia.roskenet.de
   POST_LOGIN_REDIRECT: https://petunia.roskenet.de/petunias
