--- a/deploy/k8s/villadiana/deployment.yaml
+++ b/deploy/k8s/villadiana/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: villadiana
-        image: roskenet/villadiana:3.28.0
+        image: roskenet/villadiana:3.29.0
         env:
           - name: KEYCLOAK_ISSUER_URI
             valueFrom:
@@ -26,11 +26,11 @@ spec:
               configMapKeyRef:
                 name: villadiana
                 key: KEYCLOAK_TOKEN_URI
-          - name: NAKADI_URI
-            valueFrom:
-              configMapKeyRef:
-                name: villadiana
-                key: NAKADI_URI
+#          - name: NAKADI_URI
+#            valueFrom:
+#              configMapKeyRef:
+#                name: villadiana
+#                key: NAKADI_URI
           - name: ALLOWED_ORIGINS
             valueFrom:
               configMapKeyRef:
