--- a/villadiana/pom.xml
+++ b/villadiana/pom.xml
@@ -12,9 +12,8 @@
 
     <artifactId>villadiana</artifactId>
     <name>Villadiana</name>
-    <version>3.30.0</version>
+    <version>3.39.0</version>
     <description>Backend for Frontend</description>
-
 
     <dependencies>
         <dependency>
@@ -67,11 +66,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
-        </dependency><dependency>
-  <groupId>org.springframework.boot</groupId>
-  <artifactId>spring-boot-starter-webmvc-test</artifactId>
-  <scope>test</scope>
-</dependency>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webmvc-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
