--- a/villadiana/src/main/resources/application.yaml
+++ b/villadiana/src/main/resources/application.yaml
@@ -10,6 +10,11 @@ spring:
     timeout: 30m
   jackson:
     property-naming-strategy: SNAKE_CASE
+  data:
+    redis:
+      host: ${VALKEY_HOST:localhost}
+#      port: ${VALKEY_PORT:6379}
+      password: ${VALKEY_PASSWORD:password}
 #server:
 #  forward-headers-strategy: native
 
@@ -19,9 +24,3 @@ app:
       - ${ALLOWED_ORIGINS:https://petunia.roskenet.de}
     post-logout-redirect-uri: ${POST_LOGOUT_REDIRECT:https://petunia.roskenet.de}
     default-login-success-url: ${POST_LOGIN_REDIRECT:https://petunia.roskenet.de/petunias}
-  data:
-    redis:
-      host: ${VALKEY_HOST:valkey}
-      port: ${VALKEY_PORT:6379}
-      password: ${VALKEY_PASSWORD:password}
-
