Problems wit OAuth2

--- a/deploy/k8s/villadiana/configmap.yaml
+++ b/deploy/k8s/villadiana/configmap.yaml
@@ -6,6 +6,6 @@ data:
   KEYCLOAK_ISSUER_URI: https://auth.roskenet.de/realms/petunia
   KEYCLOAK_TOKEN_URI: https://auth.roskenet.de/realms/petunia/protocol/openid-connect/token
   KEYCLOAK_SECRET: EYGbTMu3YVn4RZWNEcsgfaeJgbppcNwD
-  ALLOWED_ORIGINS: https://petunia.roskenet.de
+#  ALLOWED_ORIGINS: https://petunia.roskenet.de
   POST_LOGOUT_REDIRECT: https://petunia.roskenet.de
   POST_LOGIN_REDIRECT: https://petunia.roskenet.de/petunias
