--- a/villadiana/src/main/resources/application-int.yaml
+++ b/villadiana/src/main/resources/application-int.yaml
@@ -1,29 +1,6 @@
-spring:
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.data.redis.autoconfigure.DataRedisAutoConfiguration
-  security:
-    oauth2:
-      client:
-        provider:
-          keycloak:
-            issuer-uri: http://keycloak/realms/petunia
-            token-uri: http://keycloak/realms/petunia/protocol/openid-connect/token
-        registration:
-          keycloak:
-            client-id: villadiana
-            client-secret: miqtl8qIoEuLXXEOzvDmwP63xFWXaNje
-            authorization-grant-type: authorization_code
-            scope: openid,profile,email
-            provider: keycloak
-
-management:
-  otlp:
-    metrics:
-      export:
-        enabled: off
-
-NAKADI_URI: http://nakadi
 ALLOWED_ORIGINS: http://localhost:3000
 POST_LOGOUT_REDIRECT: http://localhost:3000
 POST_LOGIN_REDIRECT: http://localhost:3000/petunias
+
+KEYCLOAK_ISSUER_URI: http://keycloak/realms/petunia
+KEYCLOAK_TOKEN_URI: http://keycloak/realms/petunia/protocol/openid-connect/token
