--- a/deploy/minikube/infra/petunia-secrets.yaml
+++ b/deploy/minikube/infra/petunia-secrets.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: petunia-secrets
+  name: petunia-secret
 type: Opaque
 stringData:
-  KEYCLOAK_SECRET: miqtl8qIoEuLXXEOzvDmwP63xFWXaNje
-  KEYCLOAK_ADMIN: keycloak
-  KEYCLOAK_ADMIN_PASSWORD: keycloak
+  POSTGRES_MASTER_PASSWORD: postgres
