--- a/deploy/minikube/postgres/pvc.yaml
+++ b/deploy/minikube/postgres/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres
+  name: postgres-data
   labels:
     app: postgres
 spec:
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 2Gi
-  storageClassName: data
+  storageClassName: postgres-data
