--- a/deploy/minikube/infra/petunia-secrets.yaml
+++ b/deploy/minikube/infra/petunia-secrets.yaml
@@ -5,3 +5,6 @@ metadata:
 type: Opaque
 stringData:
   POSTGRES_MASTER_PASSWORD: postgres
+  KEYCLOAK_ADMIN_PASSWORD: keycloak
+  KEYCLOAK_DB_PASSWORD: keycloak
+  KEYCLOAK_VILLADIANA_SECRET: KA2xaeDuGp664TmzdyOSiPrkjBHZ7Kro
