--- a/deploy/minikube/infra/petunia-ingress.yaml
+++ b/deploy/minikube/infra/petunia-ingress.yaml
@@ -20,3 +20,13 @@ spec:
               number: 8080
         path: /
         pathType: Prefix
+  - host: petunia
+    http:
+      paths:
+        - backend:
+            service:
+              name: alpicola
+              port:
+                number: 80
+          path: /
+          pathType: Prefix
