--- a/deploy/minikube/alpicola/deployment.yaml
+++ b/deploy/minikube/alpicola/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: alpicola
-        image: roskenet/alpicola:2.85.0
+        image: roskenet/alpicola:2.90.0-minikube
         ports:
         - name: www
           containerPort: 80
