--- a/deploy/minikube/infra/petunia-secrets.yaml
+++ b/deploy/minikube/infra/petunia-secrets.yaml
@@ -8,3 +8,4 @@ stringData:
   KEYCLOAK_ADMIN_PASSWORD: keycloak
   KEYCLOAK_DB_PASSWORD: keycloak
   KEYCLOAK_VILLADIANA_SECRET: KA2xaeDuGp664TmzdyOSiPrkjBHZ7Kro
+  VALKEY_PASSWORD: password
