--- a/villadiana/src/main/resources/application-dev.yaml
+++ b/villadiana/src/main/resources/application-dev.yaml
@@ -1,11 +1,9 @@
 spring:
+#  autoconfigure:
+#    exclude:
+#      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+#      - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#      - org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
   autoconfigure:
     exclude:
-      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
-#      - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-      - org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
-management:
-  otlp:
-    metrics:
-      export:
-        enabled: off
+      - org.springframework.boot.data.redis.autoconfigure.DataRedisAutoConfiguration
