--- a/deploy/minikube/villadiana/deployment.yaml
+++ b/deploy/minikube/villadiana/deployment.yaml
@@ -14,7 +14,21 @@ spec:
     spec:
       containers:
       - name: villadiana
-        image: roskenet/villadiana:3.46.0
+        image: roskenet/villadiana:3.49.0
         ports:
         - name: www
           containerPort: 8080
+        envFrom:
+        - configMapRef:
+            name: villadiana
+        env:
+        - name: KEYCLOAK_VILLADIANA_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: petunia-secret
+              key: KEYCLOAK_VILLADIANA_SECRET
+        - name: VALKEY_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: petunia-secret
+              key: VALKEY_PASSWORD
