--- a/deploy/minikube/villadiana/configmap.yaml
+++ b/deploy/minikube/villadiana/configmap.yaml
@@ -5,6 +5,5 @@ metadata:
 data:
   KEYCLOAK_ISSUER_URI: http://keycloak/realms/petunia
   KEYCLOAK_TOKEN_URI: http://keycloak/realms/petunia/protocol/openid-connect/token
-  KEYCLOAK_SECRET: miqtl8qIoEuLXXEOzvDmwP63xFWXaNje
-  POST_LOGOUT_REDIRECT: http://alpicola
-  POST_LOGIN_REDIRECT: http://alpicola/petunias
+  POST_LOGOUT_REDIRECT_URI: http://alpicola
+  DEFAULT_LOGIN_SUCCESS_URL: http://alpicola/petunias
