--- a/villadiana/src/main/resources/application-prod.yaml
+++ b/villadiana/src/main/resources/application-prod.yaml
@@ -1,6 +1,7 @@
-#ALLOWED_ORIGINS: https://petunia.roskenet.de
-#POST_LOGOUT_REDIRECT: https://petunia.roskenet.de
+#ALLOWED_ORIGIN_PATTERNS: https://petunia.roskenet.de
+#POST_LOGOUT_REDIRECT_URI: https://petunia.roskenet.de
 #POST_LOGIN_REDIRECT: https://petunia.roskenet.de/petunias
+#DEFAULT_LOGIN_SUCCESS_URL: https://petunia.roskenet.de/petunias
 #
 #KEYCLOAK_ISSUER_URI: https://auth.roskenet.de/realms/petunia
 #KEYCLOAK_TOKEN_URI: https://auth.roskenet.de/realms/petunia/protocol/openid-connect/token
