Add minikube villadiana deployment

--- a/deploy/minikube/villadiana/configmap.yaml
+++ b/deploy/minikube/villadiana/configmap.yaml
@@ -8,4 +8,4 @@ data:
   POST_LOGOUT_REDIRECT_URI: http://alpicola
   DEFAULT_LOGIN_SUCCESS_URL: http://alpicola/petunias
   ALLOWED_ORIGIN_PATTERNS: http://alpicola,https://petunia.roskenet.de,http://petunia
-  ENVIRONMENT: prod
+  ENVIRONMENT: int
