--- a/deploy/minikube/keycloak/configmap.yaml
+++ b/deploy/minikube/keycloak/configmap.yaml
@@ -6,14 +6,14 @@ metadata:
     app: keycloak
 data:
   JDBC_URL: "jdbc:postgresql://postgres/keycloak"
-  HOSTNAME: "http://keycloak"
+  HOSTNAME: "http://keycloak.local"
   KEYCLOAK_ADMIN: "keycloak"
   DB_VENDOR: "postgres"
   DB_ADDR: "postgres"
   DB_PORT: "5432"
   DB_USER: "keycloak"
   DB_DATABASE: "keycloak"
-  KC_HOSTNAME: "http://keycloak"
+  KC_HOSTNAME: "http://keycloak.local"
   KC_PROXY: "edge"
   KC_HTTP_ENABLED: "true"
   KC_HOSTNAME_STRICT: "false"
