--- a/deploy/minikube/villadiana/configmap.yaml
+++ b/deploy/minikube/villadiana/configmap.yaml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: villadiana
 data:
-  KEYCLOAK_ISSUER_URI: http://keycloak/realms/petunia
+  KEYCLOAK_ISSUER_URI: http://keycloak.local/realms/petunia
   KEYCLOAK_TOKEN_URI: http://keycloak/realms/petunia/protocol/openid-connect/token
-  POST_LOGOUT_REDIRECT_URI: http://alpicola
-  DEFAULT_LOGIN_SUCCESS_URL: http://alpicola/petunias
-  ALLOWED_ORIGIN_PATTERNS: http://alpicola,https://petunia.roskenet.de,http://petunia
+  POST_LOGOUT_REDIRECT_URI: http://alpicola.local
+  DEFAULT_LOGIN_SUCCESS_URL: http://alpicola.local/petunias
+  ALLOWED_ORIGIN_PATTERNS: http://alpicola.local,https://petunia.roskenet.de,http://petunia.local
   ENVIRONMENT: int
