Deploy on kubernetes

--- a/deploy/k8s/infra/petunia-secrets.yaml
+++ b/deploy/k8s/infra/petunia-secrets.yaml
@@ -7,5 +7,5 @@ stringData:
   POSTGRES_MASTER_PASSWORD: postgres
   KEYCLOAK_ADMIN_PASSWORD: keycloak
   KEYCLOAK_DB_PASSWORD: keycloak
-  KEYCLOAK_VILLADIANA_SECRET: EYGbTMu3YVn4RZWNEcsgfaeJgbppcNwD
+  KEYCLOAK_VILLADIANA_SECRET:
   VALKEY_PASSWORD: password
